# ifinallywill

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLIENT_ROADMAP.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_QUICK_START.md  audit-findings-review.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: test.yml  (+2 more)
.specify/: README.md
__tests__/: README.md  chat-widget-test-scenarios.md  expected-metadata-examples.json  knowledge-page-test-scenarios.md
_deprecated/: .gitkeep
docs/: CODEBASE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  IFINALLYILL_PREPLAN_ANALYSIS.md  IFINALLYWILL_PLAN.md  IMPLEMENTATION_CONTINUATION.md  ORCHESTRATION_COMPLETE.md  PHASE1_FINDINGS.md  QUICK_START_IMPLEMENTATION_PLAN.md  RAG_CHAT_WORKFLOW.md  RAILWAY_DEPLOYMENT.md  README.md  V6_EXTRACTION.md  implementation_temp_implementation.md  plan.md  summary.md
infrastructure/: README.md
livekit-agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  ai_providers.py  ai_router.py  backend_client.py  config.py  docker-compose.yml  frame_processor.py  livekit.yaml  prompt_engineering.py  requirements.txt  survey_agent.py
marketing/: .gitkeep  product_strategy_research.md  strategy.md
scripts/: README.md  archive-wal.sh  backup-cron.sh  backup-monitoring.sh  backup-postgres.sh  deploy.sh  destroy.sh  generate-synthetic-examples.ts  logs.sh  postgresql-backup-config.conf  restore-postgres.sh  scale.sh  validate.sh
services/vk-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
services/vk-agent/janus/: janus.jcfg
services/vk-agent/src/: __init__.py  agent.py  api.py  audio_processor.py  bridge.py  config.py  gemini_client.py  janus_client.py  main.py  models.py  rtp_handler.py  vad.py  video_processor.py  videoroom_client.py
services/vk-agent/tests/: __init__.py  conftest.py  test_models.py  test_rtp_handler.py
(+751 files in other folders)
